plang/testing/logs/false-incorrect/194/program194.p.p
mWPb ayP16 S r7xV1 ci34M :- zG RE3X zi8 grkf (G), cC TH (a x BFBa J) (dmCF).

uPii.
hMz8 :- qTo (ia (Qv9)).
j (b29uo (et) Zg (N) xi00) (qM suDu e SCi0S) Sv (cWzhA) :- sW WlQ0.

nc Nuxw (vebCa (Fy)) Rn Ojn.

w (v (NWg9s)) b3 Ru (xrMNp (T)).


yb (zc (Qs) (wnh (NFl8) G10dv (QtGq4) A) O (tZqg (O6))) (El) (xX (Usa)) p.
qU cC (M2xy) :- (st fB zsh); (mXS (REq) isT), yFVUC (Jti); yGN (vx pLce8 XRGS) X JyT, bjcf dcF Ld aZ6, v YME ZAs lVr pt; (t (c aWGRB), y (C) (o Rf8Y (rg (SBZ) jPGpx) S2B2Y) iUOz), n, vpV (l2I tlv U (bw Tnh zZW (rWLQ) GGHT) dD) YMM (J) (Z6Z); ot En Wm (liaV Cc4S hhg5X (ExNl) dS01D), ((((r (H1v) (eG (Z)))))).
m :- ((cV8l (wc QvJw H); yxMxZ), wqpgL (wj bTN (qBpdc) (p (Oi) (sWg (px1d (Mg) (FF5))))) hP0el KC7MZ (OP); c (a (vS) (G8HiP) Wqnk); uzRj3 y3g i1o2 PW; b (ruu (RY) (h (ka VGo OJvor (gX582 (Oucrc) Vci jdN) d) (Gz) e2Tl) MZy) FnKjd (ddi F JCDq3) h, hq (KRJZ) (MfElb) t; (j35s (Da) (noWjh) (bVO) (C))).
bR3lz am QYbyw.

h2jw :- ((f (dt3t z98 h ZC), b y YS7X (pZOY Z9 (H)); gvO dz3 (Ihg))); ((cVB0), p8 (ur) (ZdH) (B) (BFof); sz yd4Q (G) i2H (v (s7vA HP oHh) (lP16S (R) (SzP) (uCW (v wQ y o) bVa)) C8 (zzuCE (UiI1d) eX cZy9 (Jb))); (fz3JT rv0mN gSHh sJ); hN186; eUPl B6t JxCUV jr2o (sMS)).
? u d2t; (rh; anH).
